--- a/estilo/style.css
+++ b/estilo/style.css
@@ -77,7 +77,7 @@ nav > a:hover {
 }
 
 main {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.705);
     max-width: 800px;
     min-width: 300px;
     margin: auto;
